--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ body{
 .job{
     display: flex;
     background-color: white;
+    border-radius: 4px;
 }
 
 .logo{
@@ -129,4 +130,81 @@ body{
     background-color: #5CA5A5;
     color:hsl(180, 31%, 95%);
     cursor: pointer;
+}
+
+#searchBox{
+    position: absolute;
+    top: 6.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: white;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 4px;
+}
+
+.searchFilterBox{
+    width: 100%;
+    padding-left: 40px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 16px;
+}
+
+.filters{
+    display: flex;
+    flex-direction: row;
+    border-radius: 4px;
+
+}
+
+.filterValues{
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 4px 8px 4px 8px;
+    font-family: Spartan;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+    background-color: #EFFAFA;
+    color: #5CA5A5;
+
+}
+
+.removeBtn{
+    background-color: #5CA5A5;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 9px;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.removeBtn:hover{
+    background-color: #2B3939;
+}
+
+#clearBtn{
+    padding-top: 24px;
+    padding-right: 40px;
+    padding-bottom: 24px;
+    font-family: 'Spartan';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 24px;
+    color: #5CA5A5;
+}
+
+#clearBtn:hover{
+    text-decoration-line: underline;
+
 }
